# squad-dashboard

./: .env_template  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  build.gradle.kts  docker-compose.yml  go.mod  go.sum  settings.gradle.kts
app/: build.gradle.kts  package.json
cmd/api/: BUILD.bazel  main.go
cmd/awscostcollector/: BUILD.bazel  main.go
cmd/configloader/: BUILD.bazel  main.go
cmd/dashboardcli/: BUILD.bazel  main.go
cmd/dbmigration/: BUILD.bazel  main.go
cmd/dbmigration/migrations/: 000001_create_jira_issue_table.down.sql  000001_create_jira_issue_table.up.sql  000002_add_issue_type_jira_issue.down.sql  000002_add_issue_type_jira_issue.up.sql  000003_create_transitions_table.down.sql  000003_create_transitions_table.up.sql  000004_add_jira_transitions_constraint.down.sql  000004_add_jira_transitions_constraint.up.sql  000005_create_jira_issue_calculations_table.down.sql  000005_create_jira_issue_calculations_table.up.sql  000006_add_project_to_issue_table.down.sql  000006_add_project_to_issue_table.up.sql  000007_add_key_dates_to_calculations_table.down.sql  000007_add_key_dates_to_calculations_table.up.sql  000008_update_calculations_default_value.down.sql  000008_update_calculations_default_value.up.sql  000009_create_github_pr_table.down.sql  000009_create_github_pr_table.up.sql  000010_create_jira_issue_reports_table.down.sql  000010_create_jira_issue_reports_table.up.sql  000011_add_issue_end_state_jira_issue_calculations.down.sql  000011_add_issue_end_state_jira_issue_calculations.up.sql  000012_create_jira_epic_groups_table.down.sql  000012_create_jira_epic_groups_table.up.sql  000013_create_jira_issue_labels_table.down.sql  000013_create_jira_issue_labels_table.up.sql  000014_create_pd_oncalls_table.down.sql  000014_create_pd_oncalls_table.up.sql  000015_create_jira_config_tables.down.sql  000015_create_jira_config_tables.up.sql  000016_change_jira_work_state_table.down.sql  000016_change_jira_work_state_table.up.sql  000016_rename_jira_work_state_table.down.sql  000016_rename_jira_work_state_table.up.sql  000017_create_non_working_days_table.down.sql  000017_create_non_working_days_table.up.sql  000018_add_unplanned_issue_column.down.sql  000018_add_unplanned_issue_column.up.sql
cmd/githubprcollector/: BUILD.bazel  main.go
cmd/googlesheetcollector/: BUILD.bazel  main.go
cmd/jiracollector/: BUILD.bazel  Makefile  deploy.sh  dockerfile  jiracollector.go  main.go
cmd/jiracollector/adapters/: BUILD.bazel  issueadapter.go  issueadapter_test.go
cmd/jiracollector/jiracollector/: BUILD.bazel  jiracollector.go  jiraissuecollector.go  jiraunplannedcollector.go
cmd/jiracollector/models/: BUILD.bazel  models.go
cmd/jiracollector/repository/: BUILD.bazel  issuerepo.go  pgissuerepo.go
cmd/jiraissuecalculator/: BUILD.bazel  main.go
cmd/jiraissuecalculator/calculator/: BUILD.bazel  calculator.go
cmd/pagerdutyoncallcollector/: BUILD.bazel  main.go
collectors/collector-common/: build.gradle.kts
collectors/datadog-collector/: build.gradle.kts
collectors/datadog-event-collector/: build.gradle.kts
collectors/jira-collector/: build.gradle.kts
collectors/pagerduty-collector/: build.gradle.kts
common-test/: build.gradle.kts
flyway/: Dockerfile  wait_for_postgres
flyway/sql/down/: U1__Create_Jira_Data_Tables.sql  U1__Create_db_users.sql  U3__Create_Jira_Triggers.sql  U4__Add_Ingestion_Columns.sql
flyway/sql/up/: V1__Create_db_users.sql  V2__Create_Jira_Data_Tables.sql  V3__Create_Jira_Triggers.sql  V4__Add_Ingestion_Columns.sql  V5__Fix_Functions.sql
pkg/api/controllers/: BUILD.bazel  health_controller.go  jira_data_controller.go  jira_stats_controller.go
pkg/api/routes/: BUILD.bazel  health_routes.go  jira_data_routes.go  jira_stats_routes.go
pkg/calculatormodels/: BUILD.bazel  calculatormodels.go
pkg/config/models/: BUILD.bazel  models.go
pkg/config/repo/: BUILD.bazel  configrepository.go  postgresconfigrespository.go
pkg/config/tasks/: BUILD.bazel  loader.go
pkg/configloader/: BUILD.bazel  configloader.go
pkg/configrepository/: BUILD.bazel  configrepository.go  postgresconfigrespository.go
pkg/dashboard/: BUILD.bazel  dashboard.go
pkg/dashboard/models/: BUILD.bazel  models.go
pkg/dateutil/: BUILD.bazel  dateutil.go  dateutil_test.go
pkg/github/models/: BUILD.bazel  models.go
pkg/github/repo/: BUILD.bazel  repository.go
pkg/github/service/: BUILD.bazel  service.go
pkg/githubmodels/: BUILD.bazel  githubmodels.go
pkg/githubrepository/: BUILD.bazel  githubrepository.go
pkg/githubservice/: BUILD.bazel  githubservice.go
pkg/jira/models/: BUILD.bazel  models.go
pkg/jira/service/: BUILD.bazel  service.go
pkg/jiracalculationsrepository/: BUILD.bazel  jiracalaculationsrepository.go  postgresjiracalaculationsrespository.go
pkg/jiraconfigrepository/: BUILD.bazel  jiraconfigrepository.go  postgresjiraconfigrespository.go
pkg/jiramodels/: BUILD.bazel  jiramodels.go
pkg/jirarepository/: BUILD.bazel  jirarepository.go  postgresjirarepository.go
pkg/jiraservice/: BUILD.bazel  jiraservice.go
pkg/jirastatsservice/: BUILD.bazel  jirastatsservice.go
pkg/mathutil/: BUILD.bazel  mathutil.go
pkg/models/: BUILD.bazel  models.go
pkg/pagerduty/models/: BUILD.bazel  models.go
pkg/pagerduty/repo/: BUILD.bazel  pagerdutyrepository.go
pkg/pagerdutymodels/: BUILD.bazel  pagerdutymodels.go
pkg/pagerdutyrepository/: BUILD.bazel  pagerdutyrepository.go
pkg/pagerdutyservice/: BUILD.bazel  pagerdutyservice.go
pkg/paginator/: BUILD.bazel  paginator.go  paginator_test.go
pkg/printer/: BUILD.bazel  commandlineprinter.go  pdfreportprinter.go  plotprinter.go  printer.go
pkg/report/: BUILD.bazel  report.go
pkg/statsmodels/: BUILD.bazel  statsmodels.go
pkg/statsservice/: BUILD.bazel  statsservice.go
pkg/statsutil/: BUILD.bazel  statsutil.go
pkg/util/: BUILD.bazel  paginator.go  paginator_test.go
services/app/: BUILD.bazel  main.go
services/app/routes/: BUILD.bazel  api.go
services/datadashboard/: BUILD.bazel  Makefile  deploy.sh  dockerfile  main.go
(+90 files in other folders)
