load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "awscostcollector_lib",
    srcs = ["main.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/awscostcollector",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go-v2/config",
        "//vendor/github.com/aws/aws-sdk-go-v2/service/costexplorer",
        "//vendor/github.com/aws/aws-sdk-go-v2/service/costexplorer/types",
    ],
)

go_binary(
    name = "awscostcollector",
    embed = [":awscostcollector_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/awscostcollector"],
    files = [":awscostcollector"],
)
