load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "configloader_lib",
    srcs = ["main.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/configloader",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/configrepository",
        "//vendor/github.com/Netflix/go-env",
    ],
)

go_binary(
    name = "configloader",
    embed = [":configloader_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/configloader"],
    files = [":configloader"],
)
