load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "dashboardcli_lib",
    srcs = ["main.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/dashboardcli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dashboard",
        "//pkg/jirarepository",
        "//pkg/printer",
    ],
)

go_binary(
    name = "dashboardcli",
    embed = [":dashboardcli_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/dashboardcli"],
    files = [":dashboardcli"],
)
