load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "jiracollector_lib",
    srcs = ["main.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/jiracollector",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/jiracollector/jiracollector",
        "//pkg/jira/repo/issuerepository",
        "//pkg/jira/service:jiraservice",
        "//vendor/github.com/Netflix/go-env",
    ],
)

go_binary(
    name = "jiracollector",
    embed = [":jiracollector_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/jiracollector"],
    files = [":jiracollector"],
)
