load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "jiraissuecalculator_lib",
    srcs = ["main.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/jiraissuecalculator",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/jiraissuecalculator/calculator",
        "//pkg/config/repo",
        "//pkg/jira/repo/calculationsrepository",
        "//pkg/jira/repo/issuerepository",
        "//vendor/github.com/Netflix/go-env",
        "//vendor/golang.org/x/exp/slices",
    ],
)

go_binary(
    name = "jiraissuecalculator",
    embed = [":jiraissuecalculator_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/jiraissuecalculator"],
    files = [":jiraissuecalculator"],
)
