load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dashboard",
    srcs = ["dashboard.go"],
    importpath = "github.com/stebennett/squad-dashboard/pkg/dashboard",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dashboard/models",
        "//pkg/dateutil",
        "//pkg/jirarepository",
        "//pkg/mathutil",
    ],
)
