load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dateutil",
    srcs = ["dateutil.go"],
    importpath = "github.com/stebennett/squad-dashboard/pkg/dateutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "dateutil_test",
    srcs = ["dateutil_test.go"],
    embed = [":dateutil"],
)
