load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pagerdutyrepository",
    srcs = ["pagerdutyrepository.go"],
    importpath = "github.com/stebennett/squad-dashboard/pkg/pagerdutyrepository",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pagerdutymodels",
        "//vendor/github.com/lib/pq",
    ],
)
