load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "paginator",
    srcs = ["paginator.go"],
    importpath = "github.com/stebennett/squad-dashboard/pkg/paginator",
    visibility = ["//visibility:public"],
)

go_test(
    name = "paginator_test",
    srcs = ["paginator_test.go"],
    embed = [":paginator"],
)
