load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "printer",
    srcs = [
        "commandlineprinter.go",
        "printer.go",
    ],
    importpath = "github.com/stebennett/squad-dashboard/pkg/printer",
    visibility = ["//visibility:public"],
    deps = ["//pkg/dashboard/models"],
)
