load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "printer",
    srcs = [
        "commandlineprinter.go",
        "plotprinter.go",
        "printer.go",
    ],
    importpath = "github.com/stebennett/squad-dashboard/pkg/printer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dashboard/models",
        "//vendor/gonum.org/v1/plot",
        "//vendor/gonum.org/v1/plot/plotter",
        "//vendor/gonum.org/v1/plot/vg",
        "//vendor/gonum.org/v1/plot/vg/draw",
    ],
)
