load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = ["paginator.go"],
    importpath = "github.com/stebennett/squad-dashboard/pkg/util",
    visibility = ["//visibility:public"],
)

go_test(
    name = "util_test",
    srcs = ["paginator_test.go"],
    embed = [":util"],
)
