load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/stebennett/squad-dashboard/services/app",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/jira/repo/calculationsrepository",
        "//pkg/statsservice",
        "//services/app/routes",
        "//vendor/github.com/Netflix/go-env",
        "//vendor/github.com/gin-gonic/gin",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/app"],
    files = [":app"],
)
