load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "adapters",
    srcs = ["issueadapter.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/jiracollector/adapters",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/jiracollector/models",
        "//pkg/jiraservice",
    ],
)

go_test(
    name = "adapters_test",
    srcs = ["issueadapter_test.go"],
    embed = [":adapters"],
    deps = [
        "//pkg/jiraservice",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
