load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "jiracollector",
    srcs = [
        "jiracollector.go",
        "jiraissuecollector.go",
        "jiraunplannedcollector.go",
    ],
    importpath = "github.com/stebennett/squad-dashboard/cmd/jiracollector/jiracollector",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/jiracollector/models",
        "//pkg/jira/models",
        "//pkg/jira/repo/issuerepository",
        "//pkg/jiraservice",
        "//pkg/paginator",
    ],
)
