load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["issuerepo.go"],
    importpath = "github.com/stebennett/squad-dashboard/cmd/jiracollector/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/jiramodels",
        "//vendor/github.com/lib/pq",
    ],
)
